Updating business rules, writing tests, adding a project description, and cleaning up imports