@@ -6,12 +6,14 @@ import com.space.management.domain.SpaceXQueryRepository;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+
+import static java.util.Comparator.comparing;
+import static java.util.Comparator.reverseOrder;
 
 class InMemorySpaceXQueryRepository implements SpaceXQueryRepository {
     private final SpaceXDataStore dataStore;
 
-     InMemorySpaceXQueryRepository(SpaceXDataStore dataStore) {
+    InMemorySpaceXQueryRepository(SpaceXDataStore dataStore) {
         this.dataStore = dataStore;
     }
 
@@ -20,7 +22,7 @@ class InMemorySpaceXQueryRepository implements SpaceXQueryRepository {
         return dataStore.getMissionsTable().values().stream()
             .map(this::mapToMissionModel)
             .sorted(createMissionSummaryComparator())
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private MissionModel mapToMissionModel(MissionEntity missionEntity) {
@@ -28,7 +30,7 @@ class InMemorySpaceXQueryRepository implements SpaceXQueryRepository {
             .map(rocketName -> dataStore.getRocketsTable().get(rocketName))
             .filter(Objects::nonNull)
             .map(rocketEntity -> new RocketModel(rocketEntity.getName(), rocketEntity.getStatus()))
-            .collect(Collectors.toList());
+            .toList();
 
         return new MissionModel(
             missionEntity.getName(),
@@ -38,8 +40,7 @@ class InMemorySpaceXQueryRepository implements SpaceXQueryRepository {
     }
 
     private Comparator<MissionModel> createMissionSummaryComparator() {
-        return Comparator
-            .comparing((MissionModel m) -> m.rockets().size()).reversed()
-            .thenComparing(MissionModel::name, Comparator.reverseOrder());
+        return comparing((MissionModel m) -> m.rockets().size()).reversed()
+            .thenComparing(MissionModel::name, reverseOrder());
     }
 }
